refactor(pages): replace batch page upload with single page upload functionality in Pages module
- Single upload is better to a base version that integrates with
rabbitmq
